--- a/django/django_test/templates/home.html
+++ b/django/django_test/templates/home.html
@@ -27,14 +27,15 @@
 
 
 <!--Carousel -->
-<!--
-<div align="center" class="your-class">
-	<div><img src="{% static "assets/images/f1.jpg" %}"  width="100%"></div>
-	<div><img src="{% static "assets/images/f2.jpg" %}"  width="100%"></div> 
-</div>
--->
 
-	<img class = "img-border" src="{% static "assets/images/f3.jpg" %}"  width="100%">
+<div class="slk">
+	<div><img src="{% static "assets/images/f1.jpg" %}"  width="100%"></div>
+	<div><img src="{% static "assets/images/f2.jpg" %}"  width="100%"></div>
+		<div><img src="{% static "assets/images/f3.jpg" %}"  width="100%"></div> 
+</div>
+
+
+	<!--<img class = "img-border" src="{% static "assets/images/f3.jpg" %}"  width="100%">-->
 {% endblock %}
 
 {% block content %}
