--- a/django/django_test/templates/story.html
+++ b/django/django_test/templates/story.html
@@ -35,37 +35,37 @@
 -->
 <h1>Our Story</h1>
 
-<div class="row">
-    <div class="large-4 columns">
-LONDON 
+<div class="row" data-equalizer>
+    <div style="margin: 10px 30px 10px 30px;"  class="panel large-3 columns" data-equalizer-watch>
+<h3>LONDON </h3>
 A forward-thinking city with a penchant for the unique, London has a multi-faceted persona defined as being eccentric, modern and timeless. Home to names such as Vivienne Westwood and Alexander McQueen, London is one of the leading fashion capitals and a breeding ground for aspiring talent. 
 </div>
-<div class="large-4 columns">
-SEOUL 
+<div style="margin: 10px 30px 10px 30px;"    class="panel large-3 columns" data-equalizer-watch>
+<h3>SEOUL </h3>
 Gaining recognition for its style sensibility and creative scene from which emerging trends originate, Seoul has been acknowledged for its roster of up-and-coming designers and tastemakers. With its formidable influence, Seoul is becoming the next avant-garde powerhouse in both music and fashion. 
 </div>
-<div class="large-4 columns">
-HONG KONG 
+<div style="margin: 10px 30px 10px 30px;"   class="panel large-3 columns" data-equalizer-watch>
+<h3>HONG KONG </h3>
 A blend of novelty and tradition, Hong Kong evokes the image of a brilliant landscape of towering buildings, street markets and glitzy malls. Despite being dominated by the likes of Lanvin and Prada, Hong Kong has its own domestic brands that embody the metropolis's edge and sophistication. 
 </div>
 
 
-<div class="large-12 columns"><br>
-OUR FOUNDERS 
+<div "margin-top: 20px;" class=" panel large-12 columns"><br>
+<h3>OUR FOUNDERS </h3>
 Having honed her abilities in styling, copywriting and digital marketing at a New York City fashion start-up, as a copywriter at a web design firm and as a digital content writer for a luxury e-commerce platform, Amy Lai oversees the creative aspect of That Man Concept. With strong analytical skills and proficiency with numbers, Caleb Park represents the operations and financial side of the business. His wide breath of experience includes stints in diverse fields and firms that span accounting, banking, law and consulting.
 </div>
 
-<div class="large-12 columns"><br>
+<div class=" panel large-12 columns"><br>
 
-OUR STORY
+<h3>OUR STORY</h3>
 
 “  She grew up with Vogue magazine and Fashion Television; He was influenced by his father’s fitted jackets and tapered suits.  ”
 
 Both from the Schulich School of Business, Amy Lai and Caleb Park have a collective appreciation for aesthetics, quality and design. Inspired by the designers they met in Seoul, Hong Kong and London, the idea to bring fledging brands to North America was conceived.
 </div>
 
-<div class="large-12 columns"><br>
-THE COMPANY  
+<div class="panel large-12 columns"><br>
+<h3>THE COMPANY  </h3>
 Our intent to re-design the online customer experience and provide the male sophisticate an unrivalled selection of products is what compels us to identify and recruit the best people for That Man Concept. Attentive to detail, a disposition to experiment and a hardwired belief that being great isn’t good enough are the qualities that define us. 
 [Team Image] 
 </div>
