--- a/django/django_test/templates/base.html
+++ b/django/django_test/templates/base.html
@@ -93,7 +93,7 @@
 
         <ul class="dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li>
  			<li><label>Company</label></li>
- 		<li><a href="#">Our Story</a></li>
+ 		<li><a href="/story">Our Story</a></li>
 
 
 <!-- CONTACT MODAL-->
@@ -589,6 +589,20 @@ If you have selected home delivery, we will send you an email confirming that yo
   autoplaySpeed: 2000,
   pauseOnHover: false,
 });
+
+
+$('.slk-article').slick({
+  dots: true,
+  infinite: true,
+  speed: 300,
+  centerMode: true,
+  slidesToShow: 3,
+  slidesToScroll: 1,
+  autoplay: true,
+  autoplaySpeed: 2000,
+  pauseOnHover: false,
+});
+        
 
 
     });
