--- a/django/django_test/static/css/default.css
+++ b/django/django_test/static/css/default.css
@@ -1,5 +1,8 @@
 {% load staticfiles %}
 
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700italic);
+
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -32,6 +35,9 @@ ol, ul {
   list-style: none;
 }
  
+h3{
+	margin: 30px 0 60px 0;
+}
 table {
   border-collapse: collapse;
   border-spacing: 0;
@@ -260,3 +266,5 @@ box-shadow: inset -3px 1px 33px -4px rgba(0,0,0,0.75);
 	}
 
 }
+
+
