--- a/django/django_test/staticfiles/assets/css/default.css
+++ b/django/django_test/staticfiles/assets/css/default.css
@@ -1,5 +1,8 @@
 {% load staticfiles %}
 
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700italic);
+
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -32,6 +35,9 @@ ol, ul {
   list-style: none;
 }
  
+h3{
+	margin: 30px 0 60px 0;
+}
 table {
   border-collapse: collapse;
   border-spacing: 0;
@@ -260,3 +266,70 @@ box-shadow: inset -3px 1px 33px -4px rgba(0,0,0,0.75);
 	}
 
 }
+
+* { padding: 0; margin: 0; }
+body { background: #1abc9c; font-family: 'Lato', sans-serif; text-transform: uppercase; letter-spacing: 1px;}
+
+header {
+    text-align: justify;
+    height: 8em;
+    padding: 2em 5%;
+    background: #2c3e50;
+    color: #fff;
+}
+
+header::after {
+    content: '';
+    display: inline-block;
+    width: 100%;
+}
+
+header > div,
+header > div::before,
+header nav,
+header > div h1 {
+    display: inline-block;
+    vertical-align: middle;
+    text-align: left;
+}
+
+header > div {
+    height: 100%;
+}
+
+header > div::before {
+    content: '';
+    height: 100%;
+}
+
+header > div h1 {
+    font-size: 3em;
+    font-style: italic;
+}
+
+header nav a {
+    padding: 0 0.6em;
+    white-space: nowrap;
+}
+
+header nav a:last-child {
+    padding-right: 0;
+}
+
+@media screen and (max-width: 720px){
+    
+    header {
+        height: auto;
+    }
+    
+    header > div,
+    header > div h1,
+    header nav {
+        height: auto;
+        width: auto;
+        display: block;
+        text-align: center;
+    }
+    
+}
+
