implemented User Profile with code reusability support

--- a/django/django_test/templates/base.html
+++ b/django/django_test/templates/base.html
@@ -579,9 +579,8 @@ If you have selected home delivery, we will send you an email confirming that yo
   </div>
 </li>
 
-
       	<li class="has-form">
-  		<a href="/accounts/register" class="radius button">My Account</a>
+  		<a href="/accounts/profile" class="radius button">My Account</a>
 		</li>
       </ul>
 
